--- a/src/app/features/auth-basic/org-users/org-users-list/org-users-list.component.scss
+++ b/src/app/features/auth-basic/org-users/org-users-list/org-users-list.component.scss
@@ -37,15 +37,7 @@ form mat-form-field {
 
 td.mat-column-actions,
 th.mat-column-actions {
-  background: var(--mat-sys-surface-container);
-}
-
-.mat-column-name,
-.mat-column-groups {
-  max-width: 22ch;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  background: var(--mat-table-background-color, var(--mat-sys-surface));
 }
 
 mat-divider {
