--- a/src/app/features/user-mgmt/users/users.component.scss
+++ b/src/app/features/user-mgmt/users/users.component.scss
@@ -32,15 +32,7 @@ form mat-form-field {
 
 td.mat-column-actions,
 th.mat-column-actions {
-  background: var(--mat-sys-surface-container);
-}
-
-.mat-column-username,
-.mat-column-groups {
-  max-width: 22ch;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  background: var(--mat-table-background-color, var(--mat-sys-surface));
 }
 
 mat-divider {
